<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <WebView
        android:id="@+id/wvMailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/to" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTo"
        android:layout_below="@+id/etTo"
        android:ems="10"
        android:hint="@string/from"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etFrom"
        android:layout_below="@+id/etFrom"
        android:ems="10"
        android:hint="@string/subject" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSubject"
        android:layout_below="@+id/etSubject"
        android:ems="10"
        android:hint="@string/content" />

    <Button
        android:id="@+id/bSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="button_send"
        android:text="@string/send" />

    <Spinner
        android:id="@+id/sFont"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etContent"
        android:layout_below="@+id/etContent" />

    <TextView
        android:id="@+id/tFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etContent"
        android:layout_alignTop="@+id/sFont"
        android:text="@string/font" />

    <TextView
        android:id="@+id/tMadeby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/madeBy" />

</RelativeLayout>
